<resources>
    <string name="app_name" translatable="false">MovieApp</string>

    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="bio">Bio</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="empty">Empty</string>
    <string name="no_item_found">No item found</string>
</resources>