<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.login.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/app_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login into your account"
            android:layout_marginBottom="32dp"
            android:textAppearance="@style/TextAppearance.Poppins.HeadlineLarge"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="?colorSurfaceContainer"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="?colorOutline"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="?colorSurfaceContainer"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="?colorOutline"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:inputType="textPassword"
                style="@style/TextAppearance.Poppins.BodyLarge"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/remember_me" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:backgroundTint="?colorPrimary"
            style="@style/ShapeAppearance.Material3.Corner.Large"
            android:textAppearance="@style/TextAppearance.Poppins.TitleMedium"
            android:textColor="?android:colorBackground"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_gravity="center_horizontal"
            android:text="or continue with" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/buttonGoogle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                app:cornerRadius="6dp"
                app:icon="@drawable/facebook"
                app:iconSize="20dp"
                app:iconTint="@null"
                android:backgroundTint="@color/light_gray"
                android:maxLines="1"
                android:textColor="@color/dark_gray"
                style="@style/TextAppearance.Poppins.TitleSmall"
                android:text="@string/facebook"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/buttonFacebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                app:cornerRadius="6dp"
                app:icon="@drawable/google"
                app:iconSize="20dp"
                app:iconTint="@null"
                android:backgroundTint="@color/light_gray"
                android:maxLines="1"
                android:textColor="@color/dark_gray"
                style="@style/TextAppearance.Poppins.TitleSmall"
                android:text="@string/google" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="don’t have an account ? "
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Sign Up"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="?colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>