<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.register.RegisterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonStyle"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:iconTint="?colorOnBackground"
            app:icon="@drawable/back" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginBottom="32dp"
                    android:src="@drawable/app_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create your account"
                    android:textAppearance="@style/TextAppearance.Poppins.HeadlineLarge"
                    android:textColor="?colorOnBackground"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="32dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSurfaceContainer"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                    app:startIconDrawable="@drawable/baseline_person_24"
                    app:startIconTint="?colorOutline"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSurfaceContainer"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                    app:startIconDrawable="@drawable/baseline_person_24"
                    app:startIconTint="?colorOutline"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                        android:hint="@string/surname" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSurfaceContainer"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                    app:startIconDrawable="@drawable/baseline_info_24"
                    app:startIconTint="?colorOutline"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                        android:hint="@string/bio" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSurfaceContainer"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                    app:startIconDrawable="@drawable/baseline_link_24"
                    app:startIconTint="?colorOutline"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                        android:hint="Website" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSurfaceContainer"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconTint="?colorOutline"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSurfaceContainer"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="?colorOutline"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:textAppearance="@style/TextAppearance.Poppins.BodyLarge"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingVertical="12dp"
                    android:backgroundTint="?colorPrimary"
                    style="@style/ShapeAppearance.Material3.Corner.Large"
                    android:textAppearance="@style/TextAppearance.Poppins.TitleMedium"
                    android:textColor="?android:colorBackground"
                    android:text="@string/sign_up" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_gravity="center_horizontal"
                        android:background="?android:colorBackground"
                        android:backgroundTint="?android:colorBackground"
                        android:padding="16dp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:text="or continue with" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_margin="16dp"
                        app:icon="@drawable/google"
                        app:iconGravity="textStart"
                        app:cornerRadius="24dp"
                        />

                    <com.google.android.material.button.MaterialButton
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_margin="16dp"
                        app:icon="@drawable/facebook"
                        app:iconGravity="textStart"
                        app:cornerRadius="24dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="16dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Already have an account ? "
                        android:layout_marginVertical="16dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/signInLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/login"
                        android:layout_marginVertical="16dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="?colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>